Fix spelling/grammar, thanks digger3

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1420,7 +1420,7 @@ SimpleToadletServer.enableJSLong=Whether or not FProxy should use Javascript "he
 SimpleToadletServer.enabled=Enable FProxy?
 SimpleToadletServer.enabledLong=Whether to enable FProxy and related HTTP services
 SimpleToadletServer.enableExtendedMethodHandling=Enable extended HTTP method handling?
-SimpleToadletServer.enableExtendedMethodHandlingLong=Enable this to allow other HTTP methods then GET and POST to get handled. Requiered for WebDAV and other HTTP extensions.
+SimpleToadletServer.enableExtendedMethodHandlingLong=Enable this to allow other HTTP methods then GET and POST to be handled. Required for WebDAV and other HTTP extensions.
 SimpleToadletServer.enableInlinePrefetch=Enable prefetching of inline images?
 SimpleToadletServer.enableInlinePrefetchLong=This may help if your browser only uses a small number of connections to talk to Freenet. On the other hand it may not.
 SimpleToadletServer.enablePersistentConnections=Enable persistent HTTP connections? (Read detailed description)
