Fix space at beginning of translation string

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -1568,7 +1568,7 @@ UpdatedVersionAvailableUserAlert.updateNowButton=Jetzt aktualisieren!
 UserAlert.apply=Übernehmen
 UserAlert.hide=Verstecken
 UserAlert.reset=Zurücksetzen
-UserAlertManager.alertsOnAlertsPage= Schauen Sie sie sich auf der ${link}Warnungs-Seite${/link} an.
+UserAlertManager.alertsOnAlertsPage=Schauen Sie sie sich auf der ${link}Warnungs-Seite${/link} an.
 UserAlertManager.alertsOnHomepage= Betrachten Sie sie auf ${link}der Freenet-Startseite${/link}.
 UserAlertManager.alertsTitle=Ausstehende Warnungen
 UserAlertManager.clickForMore=Klicken Sie auf ein Element für mehr Informationen oder um es zu entfernen.
