--- a/src/freenet/l10n/freenet.l10n.fi.properties
+++ b/src/freenet/l10n/freenet.l10n.fi.properties
@@ -770,7 +770,7 @@ UpdatedVersionAvailableUserAlert.updateNowButton=Päivitä nyt!
 UserAlert.apply=Hyväksy
 UserAlert.hide=Piilota
 UserAlert.reset=Nollaa
-UserAlertManager.alertsOnAlertsPage= Katso ne ${link}hälytyssivulla${/link}.
+UserAlertManager.alertsOnAlertsPage=Katso ne ${link}hälytyssivulla${/link}.
 UserAlertManager.alertsTitle=Ohittamattomat huomautukset
 UserAlertManager.clickForMore=Klikkaa kohdetta päästääksesi siitä eroon.
 UserAlertManager.criticalErrorCountLabel=Kriittisiä virheitä:
