German translation update

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -815,7 +815,7 @@ Node.masterKeyFile=Ort der Datei für die Master-Schlüssel
 Node.maxHTL=Maximale HTL
 Node.maxHTLLong=Maximale HTL (NUR FÜR ENTWICKLUNGS-ZWECKE BENUTZEN!)
 Node.maxOpennetPeers=Maximale Anzahl an Opennet-Partnern
-Node.maxOpennetPeersLong=Maximale Anzahl an Opennet-Partnern (muss zwischen 0 und 20 (inklusive) liegen, etwaige Darknet-Verbindungen werden vom Gesamt-Limit abgezogen)
+Node.maxOpennetPeersLong=Maximale Anzahl an Opennet-Partnern (muss zwischen 0 und 35 (inklusive) liegen, etwaige Darknet-Verbindungen werden vom Gesamt-Limit abgezogen)
 Node.maxOpennetPeersMustBeTwentyOrLess=Muss zwanzig oder weniger sein
 Node.mustBePositive=Der Konfigurations-Wert muss positiv sein
 Node.nodeDir=Knoten-Verzeichnis
@@ -1297,6 +1297,7 @@ SecurityLevels.physicalThreatLevelShort=Sicherheitslevel für Situationen, wo de
 SecurityLevels.setPassword=Bitte setzen Sie das Masterpasswort, welches benutzt werden soll, um die zwischengespeicherten Inhalte zu schützen. Je stärker das Passwort, desto stärker der Schutz: Am besten sind viele Buchstaben, Zahlen und Satzzeichen.
 SecurityLevels.setPasswordLabel=Setzen Sie das Passwort:
 SecurityLevels.setPasswordTitle=Passwort setzen
+SecurityLevels.statusBarPrefix=Ihre Sicherheitslevel:
 SecurityLevels.title=Sicherheitslevel
 SecurityLevels.tooltip=Konfiguration der Sicherheitslevel des Knotens
 SecurityLevels.userAlertExtro=Sie können diese Einstellungen auf der ${link}Konfigurationsseite${/link} ändern.
@@ -1459,6 +1460,9 @@ StatisticsToadlet.uomBytes=Updater ausgehend: ${total}
 StatisticsToadlet.usedMemory=Benutzter Java-Speicher: ${memory}
 StatisticsToadlet.versionTitle=Knoten-Versions-Informationen
 StatisticsToadlet.waiting=Wartend
+StatusBar.alerts=Nachrichten:
+StatusBar.switchToAdvancedMode=Erweiterten Modus benutzen
+StatusBar.switchToSimpleMode=Einfachen Modus benutzen
 SymlinkerToadlet.symlinks=Verknüpfungen im ToadletServer
 SymlinkerToadlet.symlinksLong=Eine Liste von "alias#target"'s ("Bezeichnung#Ziel") die eine Menge von Verknüpfungen darstellt
 TestnetHandler.cannotEnableDisableOnTheFly=Aktivieren/deaktivieren des Testnet-Modus im laufenden Betrieb unmöglich; starten Sie den Knoten neu und erhalten Sie neue  Verbindungen
