Stats page l10n additions

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -976,7 +976,19 @@ NodeStat.statsPersister=File to store node statistics in
 NodeStat.statsPersisterLong=File to store node statistics in (not client statistics, and these are used to decide whether to accept requests so please don't delete)
 NodeStat.threadLimit=Thread limit
 NodeStat.threadLimitLong=Freenet will try to limit its thread usage to the specified value, refusing new requests
+NodeStats.allRequests=All requests
+NodeStats.blockTransfers=Block transfers
+NodeStats.count=Count
+NodeStats.group=Group
+NodeStats.localCHKs=Local CHKs
+NodeStats.localSSKs=Local SSKs
 NodeStats.mustBePercentValueNotFull=This value must be a percentage between 0 and 99.
+NodeStats.pSuccess=P(Success)
+NodeStats.remoteCHKs=Remote CHKs
+NodeStats.remoteSSKs=Remote SSKs
+NodeStats.transfersTimedOut=Transfers timed out
+NodeStats.turtledDownstream=Turtled downstream
+NodeStats.turtleRequests=Turtle requests
 NodeStats.valueTooLow=This value is too low for that setting, increase it!
 NodeUpdateManager.enabled=Check for, and download new versions
 NodeUpdateManager.enabledLong=Should your node automatically check for new versions of Freenet. If yes, new versions will be automatically detected and downloaded, but not necessarily installed. This setting resets itself always back to false unless your Freenet node runs within the wrapper.
@@ -1466,10 +1478,12 @@ StatisticsToadlet.announceBytes=Announcement output: ${total}
 StatisticsToadlet.authBytes=Connection setup: ${total} output
 StatisticsToadlet.bandwidthTitle=Bandwidth
 StatisticsToadlet.cpus=Available CPUs: ${count}
+StatisticsToadlet.chkDetailTiming=Detailed timings (local CHK fetches)
 StatisticsToadlet.databaseJobsByPriority=Database jobs
 StatisticsToadlet.debuggingBytes=Debugging bytes: ${netColoring} network coloring, ${ping} ping, ${probe} probe requests, ${routed} routed test messages.
 StatisticsToadlet.fullTitle=Statistics for ${name}
 StatisticsToadlet.getLogs=Get latest node's logfile
+StatisticsToadlet.globalWindow=Global window
 StatisticsToadlet.inputRate=Input Rate: ${rate}/s (of ${max}/s)
 StatisticsToadlet.insertOutput=Insert output (excluding payload): CHK ${chk} SSK ${ssk}.
 StatisticsToadlet.jvmInfoTitle=JVM Info
@@ -1489,10 +1503,13 @@ StatisticsToadlet.osVersion=OS Version: ${version}
 StatisticsToadlet.outputRate=Output Rate: ${rate}/s (of ${max}/s)
 StatisticsToadlet.payloadOutput=Payload Output: ${total} (${rate}/sec)(${percent}%)
 StatisticsToadlet.peerStatsTitle=Peer statistics
+StatisticsToadlet.realGlobalWindow=Real global window
 StatisticsToadlet.routingDisabled=Not routing traffic (we are currently connected to the node but we or it refuse to route traffic)
 StatisticsToadlet.routingDisabledShort=Not routing traffic
 StatisticsToadlet.statisticGatheringTitle=Statistics Gathering
 StatisticsToadlet.storeJobsByPriority=Store checker jobs by priority
+StatisticsToadlet.succcessByHTL=Success rates by HTL (remote fetches)
+StatisticsToadlet.succcessRate=Success rates
 StatisticsToadlet.swapOutput=Swapping Output: ${total}.
 StatisticsToadlet.threadDumpButton=Generate a Thread Dump
 StatisticsToadlet.threads=Running threads: ${running}/${max}
