--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1508,8 +1508,8 @@ StatisticsToadlet.routingDisabled=Not routing traffic (we are currently connecte
 StatisticsToadlet.routingDisabledShort=Not routing traffic
 StatisticsToadlet.statisticGatheringTitle=Statistics Gathering
 StatisticsToadlet.storeJobsByPriority=Store checker jobs by priority
-StatisticsToadlet.succcessByHTL=Success rates by HTL (remote fetches)
-StatisticsToadlet.succcessRate=Success rates
+StatisticsToadlet.successByHTL=Success rates by HTL (remote fetches)
+StatisticsToadlet.successRate=Success rates
 StatisticsToadlet.swapOutput=Swapping Output: ${total}.
 StatisticsToadlet.threadDumpButton=Generate a Thread Dump
 StatisticsToadlet.threads=Running threads: ${running}/${max}
