--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1469,6 +1469,7 @@ StartupToadlet.title=Freenet is starting up
 StaticToadlet.pathInvalidChars=The given URI contains disallowed characters.
 StaticToadlet.pathNotFound=The path you specified doesn't exist.
 StaticToadlet.pathNotFoundTitle=Path Not Found
+StatisticsToadlet.accessRate=Access Rate
 StatisticsToadlet.ackOnlyBytes=Ack-only packets: ${total}
 StatisticsToadlet.activityInserts=Inserts: ${totalSenders} total senders, ${CHKhandlers} CHK handlers, ${SSKhandlers} SSK handlers (${local} local)
 StatisticsToadlet.activityRequests=Requests: ${totalSenders} total senders, ${CHKhandlers} CHK handlers, ${SSKhandlers} SSK handlers (${local} local)
@@ -1476,12 +1477,23 @@ StatisticsToadlet.adminBytes=Admin bytes: ${initial} initial messages, ${changed
 StatisticsToadlet.allocMemory=Allocated Java memory: ${memory}
 StatisticsToadlet.announceBytes=Announcement output: ${total}
 StatisticsToadlet.authBytes=Connection setup: ${total} output
+StatisticsToadlet.avgDist=Avg. Distance
+StatisticsToadlet.avgLocation=Avg. Location
+StatisticsToadlet.avgSuccessLoc=Avg. Success Loc.
 StatisticsToadlet.bandwidthTitle=Bandwidth
-StatisticsToadlet.cpus=Available CPUs: ${count}
+StatisticsToadlet.capacity=Capacity
+StatisticsToadlet.chkCache=Cache (CHK)
 StatisticsToadlet.chkDetailTiming=Detailed timings (local CHK fetches)
+StatisticsToadlet.chkStore=Store (CHK)
+StatisticsToadlet.cpus=Available CPUs: ${count}
+StatisticsToadlet.datasize=Data Size
+StatisticsToadlet.datastore=Datastore
 StatisticsToadlet.databaseJobsByPriority=Database jobs
 StatisticsToadlet.debuggingBytes=Debugging bytes: ${netColoring} network coloring, ${ping} ping, ${probe} probe requests, ${routed} routed test messages.
+StatisticsToadlet.distanceStats=Distance Stats
+StatisticsToadlet.falsePos=False Pos.
 StatisticsToadlet.fullTitle=Statistics for ${name}
+StatisticsToadlet.furthestSuccess=Furthest Success
 StatisticsToadlet.getLogs=Get latest node's logfile
 StatisticsToadlet.globalWindow=Global window
 StatisticsToadlet.inputRate=Input Rate: ${rate}/s (of ${max}/s)
@@ -1490,6 +1502,7 @@ StatisticsToadlet.jvmInfoTitle=JVM Info
 StatisticsToadlet.jvmVendor=JVM Vendor: ${vendor}
 StatisticsToadlet.javaVersion=Java Version: ${version}
 StatisticsToadlet.jvmVersion=JVM Version: ${version}
+StatisticsToadlet.keys=Keys
 StatisticsToadlet.maxMemory=Maximum Java memory: ${memory}
 StatisticsToadlet.maxTotalPeers=Max peers
 StatisticsToadlet.maxOpennetPeers=Max strangers
@@ -1503,32 +1516,37 @@ StatisticsToadlet.osVersion=OS Version: ${version}
 StatisticsToadlet.outputRate=Output Rate: ${rate}/s (of ${max}/s)
 StatisticsToadlet.payloadOutput=Payload Output: ${total} (${rate}/sec)(${percent}%)
 StatisticsToadlet.peerStatsTitle=Peer statistics
+StatisticsToadlet.priority=Priority
+StatisticsToadlet.readRequests=Read-Requests
 StatisticsToadlet.realGlobalWindow=Real global window
+StatisticsToadlet.requestOutput=Request output (excluding payload): CHK ${chk} SSK ${ssk}.
+StatisticsToadlet.resendBytes=Resent bytes: ${total}
 StatisticsToadlet.routingDisabled=Not routing traffic (we are currently connected to the node but we or it refuse to route traffic)
 StatisticsToadlet.routingDisabledShort=Not routing traffic
+StatisticsToadlet.running=Running
 StatisticsToadlet.statisticGatheringTitle=Statistics Gathering
 StatisticsToadlet.storeJobsByPriority=Store checker jobs by priority
 StatisticsToadlet.successByHTL=Success rates by HTL (remote fetches)
+StatisticsToadlet.successfulReads=Successful Reads
 StatisticsToadlet.successRate=Success rates
 StatisticsToadlet.swapOutput=Swapping Output: ${total}.
 StatisticsToadlet.threadDumpButton=Generate a Thread Dump
 StatisticsToadlet.threads=Running threads: ${running}/${max}
 StatisticsToadlet.threadsByPriority=Pooled threads by priority
-StatisticsToadlet.totalOverhead=Total non-request overhead: ${rate}/sec (${percent}%).
-StatisticsToadlet.priority=Priority
-StatisticsToadlet.resendBytes=Resent bytes: ${total}
-StatisticsToadlet.running=Running
-StatisticsToadlet.waiting=Waiting
-StatisticsToadlet.requestOutput=Request output (excluding payload): CHK ${chk} SSK ${ssk}.
 StatisticsToadlet.totalInput=Global Total Input: ${total}
 StatisticsToadlet.totalInputSession=Session Total Input: ${total} (${rate}/s average)
 StatisticsToadlet.totalOutput=Global Total Output: ${total}
 StatisticsToadlet.totalOutputSession=Session Total Output: ${total} (${rate}/s average)
+StatisticsToadlet.totalOverhead=Total non-request overhead: ${rate}/sec (${percent}%).
 StatisticsToadlet.transferringRequests=Transferring Requests: sending ${senders}, receiving ${receivers}, receiving turtles ${turtles}
 StatisticsToadlet.uomBytes=Updater Output: ${total}
 StatisticsToadlet.unaccountedBytes=Other output: ${total} (${percent}%)
 StatisticsToadlet.usedMemory=Used Java memory: ${memory}
+StatisticsToadlet.utilization=Utilization
 StatisticsToadlet.versionTitle=Node Version Information
+StatisticsToadlet.waiting=Waiting
+StatisticsToadlet.writeRate=Write Rate
+StatisticsToadlet.writes=Writes
 StatusBar.alerts=Messages:
 StatusBar.switchToAdvancedMode=Switch to advanced mode
 StatusBar.switchToSimpleMode=Switch to simple mode
