- l10n for "no messages" message

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1661,6 +1661,7 @@ UserAlertManager.minorCountLabel=Minor:
 UserAlertManager.totalLabel=Total:
 UserAlertManager.warningCountLabel=Warnings:
 UserAlertsToadlet.titleWithName=Status messages for ${name}
+UserAlertsToadlet.noMessages=No messages
 WelcomeToadlet.activityTitle=Current Activity
 WelcomeToadlet.arkFetchCount=ARK Fetchers: ${total}
 WelcomeToadlet.alertsSummary=Status messages summary (click for details or to change something)
