--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -1649,6 +1649,7 @@ UserAlertManager.minorCountLabel=Mineur :
 UserAlertManager.totalLabel=Total :
 UserAlertManager.warningCountLabel=Avertissements :
 UserAlertsToadlet.titleWithName=Messages pour ${name}
+UserAlertsToadlet.noMessages=Pas de messages
 WelcomeToadlet.activityTitle=Activité du moment
 WelcomeToadlet.alertsSummary=Résumé des messages (cliquez pour plus d'infos ou pour changer quelque chose)
 WelcomeToadlet.arkFetchCount=Récupérations d'ARK : ${total}
