--- a/src/freenet/l10n/freenet.l10n.zh-cn.properties
+++ b/src/freenet/l10n/freenet.l10n.zh-cn.properties
@@ -1329,6 +1329,7 @@ UserAlertManager.minorCountLabel=瑕疵:
 UserAlertManager.totalLabel=总计:
 UserAlertManager.warningCountLabel=警告:
 UserAlertsToadlet.titleWithName=${name} 的状况讯息
+UserAlertsToadlet.noMessages=没有讯息
 WelcomeToadlet.activityTitle=目前活动
 WelcomeToadlet.alertsSummary=状况讯息总表(单击以取得细节或是做些改变)
 WelcomeToadlet.arkFetchCount=ARK撷取者: ${total}
