--- a/src/freenet/l10n/freenet.l10n.zh-tw.properties
+++ b/src/freenet/l10n/freenet.l10n.zh-tw.properties
@@ -1328,6 +1328,7 @@ UserAlertManager.minorCountLabel=瑕疵:
 UserAlertManager.totalLabel=總計:
 UserAlertManager.warningCountLabel=警告:
 UserAlertsToadlet.titleWithName=${name} 的狀況訊息
+UserAlertsToadlet.noMessages=沒有訊息
 WelcomeToadlet.activityTitle=目前活動
 WelcomeToadlet.alertsSummary=狀況訊息總表(按一下以取得細節或是做些改變)
 WelcomeToadlet.arkFetchCount=ARK擷取者: ${total}
