Make download of latest version of seednodes and installers configurable

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1006,6 +1006,10 @@ NodeUpdateManager.updateCatastropheTitle=Catastrophic Update Failure!
 NodeUpdateManager.updateFailed=Update Failed: ${reason}
 NodeUpdateManager.updateFailedTitle=Update Failed!
 NodeUpdateManager.updateFailedShort=Update Failed: ${reason}
+NodeUpdateManager.updateSeednodes=Update the seednodes automatically?
+NodeUpdateManager.updateSeednodesLong=Update the seednodes.fref file automatically over Freenet?
+NodeUpdateManager.updateInstallers=Download the latest installers over Freenet?
+NodeUpdateManager.updateInstallersLong=Download the latest installers over Freenet? These will be linked from the "Add a Friend" page.
 NodeUpdateManager.updateURI=Where should Freenet look for updates?
 NodeUpdateManager.updateURILong=Where should your Freenet node look for updates?
 NotEnoughNiceLevelsUserAlert.title=Not enough Nice levels available!
