--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1628,7 +1628,7 @@ TranslationToadlet.updateTranslationCommand=Update the translation!
 UnknownContentTypeException.explanation=Your Freenet node does not know anything about this MIME type. This means that your browser might do something dangerous in response to downloading this file. For example, many formats can contain embedded images or videos, which are downloaded from the web; this is by no means innocuous, because they can ruin your anonymity and expose your IP address (if the attacker runs the web site or has access to its logs). Hyperlinks to the Web can also be a threat, for much the same reason, as can scripting, for this and other reasons.
 UnknownContentTypeException.title=Unknown and potentially dangerous content type: ${type}
 UnsupportedCharsetInFilterException.title=Unsupported text character set: ${charset}.
-UnsupportedCharsetInFilterException.explanation=This is a very rare character set and it is quite likely that this is an attempt to bypass the content filter.
+UnsupportedCharsetInFilterException.explanation=This is a very rare character set, not supported by Java, and it is quite likely that this is an attempt to bypass the content filter, or just corrupt data.
 UpdateDeployContext.cannotUpdateNoExtJar=Could not find freenet-ext.jar in wrapper.conf (did find freenet.jar: ${mainFilename})
 UpdateDeployContext.cannotUpdateNoJars=Could not find Freenet jars in wrapper.conf
 UpdateDeployContext.cannotUpdateNoMainJar=Could not find freenet.jar in wrapper.conf (did find freenet-ext.jar: ${extFilename})
