"as specified": if we find the bytes for @charset, we must ignore the sheet if there isn't a valid declaration.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1625,6 +1625,8 @@ TranslationToadlet.translationKeyLabel=Translation key
 TranslationToadlet.translationUpdateTitle=Translation update
 TranslationToadlet.translationUpdatedTitle=Translation updated!
 TranslationToadlet.updateTranslationCommand=Update the translation!
+UndetectableCharsetException.title=Could not detect charset, looks like ${charset} but isn't
+UndetectableCharsetException.explanation=Detected first few bytes of charset declaration but is invalid, ignoring the style sheet as per CSS 2.1 section 4.4.
 UnknownContentTypeException.explanation=Your Freenet node does not know anything about this MIME type. This means that your browser might do something dangerous in response to downloading this file. For example, many formats can contain embedded images or videos, which are downloaded from the web; this is by no means innocuous, because they can ruin your anonymity and expose your IP address (if the attacker runs the web site or has access to its logs). Hyperlinks to the Web can also be a threat, for much the same reason, as can scripting, for this and other reasons.
 UnknownContentTypeException.title=Unknown and potentially dangerous content type: ${type}
 UnsupportedCharsetInFilterException.title=Unsupported text character set: ${charset}.
