fix search not loaded message (thx puddinpop)

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1711,7 +1711,7 @@ WelcomeToadlet.restarting=Please wait a moment while your Freenet node is being 
 WelcomeToadlet.restartingTitle=The Freenet node is being restarted.
 WelcomeToadlet.searchBoxLabel=Search Freenet
 WelcomeToadlet.searchBoxWarningSlow=Searching can be slow at the moment, so this will open a new window for the search, you should have a look at the index sites below while you wait for the search to complete.
-WelcomeToadlet.searchPluginNotLoaded=The plugin needed to search Freenet is not loaded. Please load XMLLibrarian on ${link}the Plugins page${/link}.
+WelcomeToadlet.searchPluginNotLoaded=The plugin needed to search Freenet is not loaded. Please load Library on ${link}the Plugins page${/link}.
 WelcomeToadlet.searchFreenet=Search Freenet!
 WelcomeToadlet.shutdown=Shutdown
 WelcomeToadlet.shutdownConfirm=Are you sure you wish to shut down your Freenet node?
