Improve wording and shorten text on the first-time wizard.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -218,7 +218,7 @@ ContentFilter.textPlainReadAdvice=Plain text - not dangerous unless your browser
 ContentFilter.textPlainWriteAdvice=Plain text - not dangerous unless you include compromising information
 DarknetAddRefToadlet.title=Connect to a Friend
 DarknetAddRefToadlet.explainBoxTitle=Why you should connect to your friends running Freenet
-DarknetAddRefToadlet.explainBox1=You can improve Freenet's security by connecting to your friends. That is, to people you actually know who also run Freenet. These can be online acquaintances, but do not add connections to total strangers, as this will not improve security much and will cause problems for the network as a whole if lots of people do it. When you have added enough Friends, so that at least 5 are online at all times, you can increase your network security level to HIGH, and only connect to Friends, which is called "darknet mode". This makes it much harder for an attacker to even find out that you are running Freenet, and makes most attacks against your anonymity much harder.
+DarknetAddRefToadlet.explainBox1=You can improve Freenet's security by connecting to your friends. That is, to people you actually know who also run Freenet. These can be online acquaintances, but do not add connections to total strangers, as adding strangers as Friends will not improve security much and will cause problems for the network as a whole if lots of people do it. When you have added enough Friends, so that at least 5 are online at all times, you can increase your network security level to HIGH, and only connect to Friends, which is called "darknet mode". This makes it much harder for an attacker to even find out that you are running Freenet, and makes most attacks against your anonymity much harder.
 DarknetAddRefToadlet.explainInstallerWindows=You can find the latest Windows installer in ${filename} or click ${get-windows}here${/link}.
 DarknetAddRefToadlet.explainInstallerWindowsNotYet=Freenet has not yet managed to download the Windows installer, however you can get it over Freenet ${link}here${/link}.
 DarknetAddRefToadlet.explainInstallerNonWindows=You can find the latest non-Windows installer in ${filename} or click ${get-nonwindows}here${/link}. This is a jar file which must be opened with java; hopefully your friend can double click on it, but if that doesn't work try opening a command line and typing "java -jar ${shortfilename}".
@@ -364,14 +364,14 @@ FirstTimeWizardToadlet.connectToStrangers=Connect to strangers?
 FirstTimeWizardToadlet.connectToStrangersLong=To run Freenet, you must connect to at least five other nodes.  These should ideally be run by people whom you know and trust.  If you don't know enough friends running Freenet, you can choose to connect to strangers' nodes as well.  However, connecting to strangers allows others to find out that you are using Freenet and adds some additional security risks.  If you want to keep your use of Freenet secret, this may get you into trouble.
 FirstTimeWizardToadlet.enableOpennet=It is possible to turn off stranger connections later on, once you have added enough friends, although you will already have revealed some information to strangers in the meantime.  Freenet is still experimental, and we offer no guarantees about security.
 FirstTimeWizardToadlet.enableUPnP=Enable Universal Plug and Play (UPnP). Set this if you have a router on your local Network. Don't set it if you are directly connected to your ISP e.g. via dial-up modem, or have untrusted people on your local network.
-FirstTimeWizardToadlet.enableJSTUN=Enable automatic IP address detection via JSTUN. Uses central servers (also used by e.g. internet telephone programs) to find out your IP address. Turn off if you are concerned about this.
+FirstTimeWizardToadlet.enableJSTUN=Enable automatic IP address detection via STUN. Uses central servers (also used by e.g. internet telephone programs) to find out your IP address. Turn off if you are concerned about this.
 FirstTimeWizardToadlet.opennetYes=I want Freenet to automatically find strangers to connect to. 
 FirstTimeWizardToadlet.opennetNo=I have at least 5 friends already using Freenet and I will add their details on the Friends page.
 FirstTimeWizardToadlet.welcomeInfoboxTitle=Welcome to Freenet first time wizard!
 FirstTimeWizardToadlet.welcomeInfoboxContent1=Welcome to Freenet first time wizard. This tool will enable you to configure your node quickly and easily to get you started.
 FirstTimeWizardToadlet.bandwidthLimit=Bandwidth limits
 FirstTimeWizardToadlet.bandwidthLimitLong=Please select your internet connection type and speed (download/upload) from the dropdown menu below.
-FirstTimeWizardToadlet.bandwidthLimitAfter=Please note that Freenet will always run in background when your computer is turned on (because this improves your node's speed significantly), and will use all available bandwidth up to the limit you set (up to 50-100KB/sec or so). If you have a monthly quota, you should take this into account when setting a bandwidth limit. The above limits are upload bandwidth limits, usually the download bandwidth usage will be the same as the upload bandwidth usage.
+FirstTimeWizardToadlet.bandwidthLimitAfter=Please note that Freenet will always run in background when your computer is turned on (because this improves your node's speed significantly), and will use all available bandwidth up to the limit you set (up to 100KB/sec or so). If you have a monthly quota, you should take this into account when setting a bandwidth limit. The above limits are upload bandwidth limits, usually the download bandwidth usage will be the same as the upload bandwidth usage.
 FirstTimeWizardToadlet.bwlimitLowerSpeed=lower speed
 FirstTimeWizardToadlet.bwlimitHigherSpeed=higher speed
 FirstTimeWizardToadlet.clickContinue=Click here to continue.
@@ -381,15 +381,15 @@ FirstTimeWizardToadlet.currentPrefix=Current size:
 FirstTimeWizardToadlet.currentSpeed=Current limit:
 FirstTimeWizardToadlet.datastoreSize=Datastore size
 FirstTimeWizardToadlet.datastoreSizeLong=Please select a size for your datastore. The datastore acts like a cache; storing data for the network will help you to get better throughput when requesting popular files. The more space you can afford the better it is for the community and the faster your node and especially your downloads will go.
-FirstTimeWizardToadlet.highNetworkThreatLevelWarning=${bold}WARNING${/bold}: You are about to set the network security level to high. This means your node will not be able to connect unless ${bold}you add some connections to Friends${/bold}. These should be people you already know and at least marginally trust. If you don't know anyone already using Freenet, please use the NORMAL network security level so that Freenet will setup connections automatically. Adding people you don't know as Friends will not significantly improve security and will harm performance. Also note that HIGH security level is slower, especially if you don't have many Friends (you need 5-10 for adequate performance).
-FirstTimeWizardToadlet.highNetworkThreatLevelCheckbox=I know at least one person already using Freenet (3 preferably, 5-10 for good performance). I will add them on the Friends page. I understand that Freenet will not work unless some of my Friends are online.
+FirstTimeWizardToadlet.highNetworkThreatLevelWarning=${bold}WARNING${/bold}: You must add friends manually or Freenet will not connect! In high security mode, Freenet only connects to your Friends. These are nodes operated by people you know, which you have added through the Add a Friend page on the Friends menu. This means that Freenet will not function until you have added at least one Friend, and you should add at least 3 for better performance, preferably 5-10. Do not add anyone's node as a Friend unless you know them personally, whether online or offline, as this will harm performance and not improve security.
+FirstTimeWizardToadlet.highNetworkThreatLevelCheckbox=I know at least one person already using Freenet, and I will add them on the Friends page.
 FirstTimeWizardToadlet.isNetworkTrusted=Is your local network trusted?
 FirstTimeWizardToadlet.isNetworkTrustedLong=Is your local network trusted? If you answer yes here all the services provided by your node will be wide open to everyone willing to access them on the given network. You will be able to do selective access controls from the configuration page when the wizard is over.
 FirstTimeWizardToadlet.noNetworkIF=No additional network interface found
 FirstTimeWizardToadlet.noNetworkIFLong=Freenet hasn't found any additional network interface. It will assume that you will connect to it from your computer and only from it.
 FirstTimeWizardToadlet.iDoTrust=Do you trust people connected to ${interface} (${ip})?
 FirstTimeWizardToadlet.congratz=Welcome on board!
-FirstTimeWizardToadlet.congratzLong=Congratulations, the base configuration of your Freenet node is now done. You can change and edit any of the parameters you have just set going to the "configuration" page, reachable anytime from the menu on the left of the interface. Please note that Freenet will be slow to start with, it will improve over time. You can get started by clicking on the bookmarks on the next page. We wish you a pleasant Freenet experience.
+FirstTimeWizardToadlet.congratzLong=Congratulations, Freenet is ready to use. You can change any of the options you have just set using the Configuration menu. Please note that Freenet will be slow to start with, it will improve over time (or if you have set HIGH network security, you will need to add Friends). You can get started by clicking on the bookmarks on the next page. We wish you a pleasant Freenet experience.
 FirstTimeWizardToadlet.memory.64M=64MiB - only if desperate
 FirstTimeWizardToadlet.memory.128M=128MiB - bare minimum
 FirstTimeWizardToadlet.memory.192M=192MiB - reasonable default
@@ -397,6 +397,8 @@ FirstTimeWizardToadlet.memory.256M=256MiB - if you have at least 1GB of RAM
 FirstTimeWizardToadlet.memory.512M=512MiB - if you have lots of RAM
 FirstTimeWizardToadlet.memoryLimit=Memory usage
 FirstTimeWizardToadlet.memoryLimitLong=How much memory would you like to allow Freenet to use? If you have many downloads or uploads queued, Freenet will need more memory. We suggest you not set this below 128MB unless you are really short of RAM. If you have 1GB or more, you should probably set this to at least 256MB. This will take effect after restarting Freenet.
+FirstTimeWizardToadlet.networkThreatLevelConfirmTitle.HIGH=WARNING: You must add friends manually or Freenet will not connect!
+FirstTimeWizardToadlet.networkThreatLevelConfirmTitle.MAXIMUM=WARNING: You must add friends manually or Freenet will not connect!
 FirstTimeWizardToadlet.networkSecurityPageTitle=Freenet first time wizard! - Network security settings
 FirstTimeWizardToadlet.friendsSecurityPageTitle=Freenet first time wizard! - Friends security settings
 FirstTimeWizardToadlet.physicalSecurityPageTitle=Freenet first time wizard! - Physical security settings
@@ -1308,7 +1310,7 @@ RevocationKeyFoundUserAlert.titleDisabled=The auto-updater may have been comprom
 SecurityLevels.title=Security levels
 SecurityLevels.tooltip=Configure your Freenet node's degree of security
 SecurityLevels.networkThreatLevelShort=Protection against a stranger attacking you over the Internet
-SecurityLevels.networkThreatLevel=How much security do you need against Internet providers, corporations, governments, bored kids etc attempting to monitor your use of Freenet?
+SecurityLevels.networkThreatLevel=How much security do you need against people and organisations trying to trace what you are doing on Freenet?
 SecurityLevels.networkThreatLevel.name.MAXIMUM=MAXIMUM
 SecurityLevels.networkThreatLevel.name.HIGH=HIGH
 SecurityLevels.networkThreatLevel.name.NORMAL=NORMAL
@@ -1334,7 +1336,7 @@ SecurityLevels.maximumNetworkThreatLevelWarning=${bold}WARNING:${/bold} You are 
 SecurityLevels.maxSecurityYouNeedFriends=${bold}You must know at least one person already running Freenet${/bold}, preferably 3, 5-10 for good performance. You must add them on the Friends page. These must be people you already know and at least marginally trust.
 SecurityLevels.maximumNetworkThreatLevelCheckbox=Yes I really want to enable maximum security, I understand that Freenet is still experimental and it may still be possible to trace me, and that this setting may dramatically reduce Freenet's performance!
 SecurityLevels.friendsThreatLevelShort=Protection if your friends attack your anonymity
-SecurityLevels.friendsThreatLevel=How concerned are you about those you add as friends attempting to monitor your activities, either deliberately or as a result of their computers being compromised? If you have set the network security level to HIGH, then the friends security level determines performance, along with the number of friends added.
+SecurityLevels.friendsThreatLevel=You can connect to your friends' Freenet nodes to improve security. Freenet can share extra information with these nodes to improve speed. However, if they try to find out what you are doing with Freenet, or if their computers are infected with malware, this may increase the risk of your anonymity being breached. How concerned are you?
 SecurityLevels.friendsThreatLevelConfirmTitle=WARNING: Setting friends security level to ${mode}
 SecurityLevels.friendsThreatLevel.name.HIGH=HIGH
 SecurityLevels.friendsThreatLevel.name.NORMAL=NORMAL
@@ -1348,18 +1350,18 @@ SecurityLevels.friendsThreatLevel.desc.LOW=Freenet will share a lot of informati
 SecurityLevels.highFriendsThreatLevelWarning=You are about to set your friends threat level to high. This will reduce Freenet's performance, and shouldn't be necessary most of the time. If the reason you are setting this is that you have added people you don't know as Friends, you should consider whether you would be better off disconnecting from them and downgrading your network level to NORMAL if necessary. On the other hand if you expect an attacker to compromise your friends' computers or actively seek to turn them against you, this may be a prudent precaution.
 SecurityLevels.highFriendsThreatLevelCheckbox=I am sure I need high level protection against compromised or treacherous friends' nodes.
 SecurityLevels.physicalThreatLevelShort=Protection if your computer is seized or stolen
-SecurityLevels.physicalThreatLevel=How concerned are you about your computer being seized or stolen? Freenet can encrypt all traces of what you have been browsing on Freenet, but note that if you open files in outside applications (e.g. media player), or save them to disk, there may be traces of the content outside of Freenet.
+SecurityLevels.physicalThreatLevel=Freenet stores temporary files, persistent downloads, caches etc on disk, which may reveal what you have been doing with Freenet if this computer is seized or stolen. Freenet can encrypt these files to prevent this, but this may slow it down slightly or be inconvenient. Note that if you save files from Freenet to disk, or open them in external applications such as media players, this may leave traces, so you should consider full disk encryption via e.g. Truecrypt. How concerned are you?
 SecurityLevels.physicalThreatLevel.name.NORMAL=NORMAL
 SecurityLevels.physicalThreatLevel.name.LOW=LOW
-SecurityLevels.physicalThreatLevel.choice.NORMAL=I am concerned.
+SecurityLevels.physicalThreatLevel.choice.NORMAL=I am concerned. Encrypt all important data, so that I can erase it easily by using the panic button on the downloads/uploads page, or securely deleting the file master.keys.
 SecurityLevels.physicalThreatLevel.desc.NORMAL=Freenet will encrypt temporary files, the database of downloads and uploads, and the cache of recently visited sites. The master keys will be stored in a file master.keys, and if you securely erase that file then the other sensitive data cannot be accessed. We recommend you fetch big files to temporary space, so that they are encrypted and can be viewed through the downloads page, but you can also download files directly to disk if you want to. 
-SecurityLevels.physicalThreatLevel.choice.LOW=I am not concerned.
+SecurityLevels.physicalThreatLevel.choice.LOW=I am not concerned. Don't encrypt anything.
 SecurityLevels.physicalThreatLevel.desc.LOW=Freenet will avoid disk encryption and leave traces of what you have visited on your hard disk, improving performance (for slow CPUs) at the expense of lower security if your computer is seized. Downloads will be written directly to disk.
 SecurityLevels.physicalThreatLevel.name.HIGH=HIGH
-SecurityLevels.physicalThreatLevel.choice.HIGH=I am very concerned.
+SecurityLevels.physicalThreatLevel.choice.HIGH=I am very concerned. Encrypt all important data with a password. Do not allow access to it until I have entered the password.
 SecurityLevels.physicalThreatLevel.desc.HIGH=Freenet will password protect the master keys, so after restarting Freenet, you must enter the password to access the downloads and uploads queues, and the cache of recently visited sites. Downloads will only be stored encrypted by Freenet and will not be written to files on disk.
 SecurityLevels.physicalThreatLevel.name.MAXIMUM=MAXIMUM
-SecurityLevels.physicalThreatLevel.choice.MAXIMUM=I do not want any traces to be kept on my hard disk in a form that an attacker could possibly decode.
+SecurityLevels.physicalThreatLevel.choice.MAXIMUM=I am extremely worried. Encrypt everything and do not store the key. Wipe everything whenever the node is restarted: Persistent downloads will disappear when I restart the node.
 SecurityLevels.physicalThreatLevel.desc.MAXIMUM=Freenet will keep the encryption keys for temporary files, recently visited freesites and so on in RAM only, and will never store the keys to disk. All downloads and uploads will persist only until restart and will not be written to disk. You should take care to avoid saving content from Freenet to disk accidentally, and consider full-system encryption using for example Truecrypt, maybe with hidden volumes.
 SecurityLevels.userAlertShortText=Security levels: Network: ${network}, Friends: ${friends}, Physical: ${physical}
 SecurityLevels.userAlertNetworkThreatLevel=Protection against a stranger attacking you over the Internet: ${level}
